--- a/assets/sass/base/_page.scss
+++ b/assets/sass/base/_page.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Story by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -34,7 +34,7 @@
 		}
 
 	body {
-		background: _palette(bg-alt);
+		background: _palette(bg);
 
 		// Stops initial animations until page loads.
 			&.is-preload {
