--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Story by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -8,16 +8,19 @@
 
 	.image {
 		border: 0;
+		border-radius: _size(border-radius);
 		display: inline-block;
 		position: relative;
 
 		img {
 			display: block;
+			border-radius: _size(border-radius);
 		}
 
 		&.left,
 		&.right {
-			max-width: 40%;
+			width: 40%;
+			max-width: 10rem;
 
 			img {
 				width: 100%;
@@ -26,14 +29,14 @@
 
 		&.left {
 			float: left;
-			padding: 0 1.5em 1em 0;
-			top: 0.25em;
+			margin: 0 1.5rem 1rem 0;
+			top: 0.25rem;
 		}
 
 		&.right {
 			float: right;
-			padding: 0 0 1em 1.5em;
-			top: 0.25em;
+			margin: 0 0 1rem 1.5rem;
+			top: 0.25rem;
 		}
 
 		&.fit {
@@ -43,20 +46,6 @@
 
 			img {
 				width: 100%;
-			}
-		}
-
-		&.featured {
-			display: block;
-			margin: 0 0 _size(section-spacing) 0;
-			width: 100%;
-
-			img {
-				width: 100%;
-			}
-
-			@include breakpoint('<=small') {
-				margin: 0 0 _size(section-spacing-small) 0;
 			}
 		}
 
