--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Story by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -13,72 +13,100 @@
 	.button {
 		@include vendor('appearance', 'none');
 		@include vendor('transition', (
-			'background-color #{_duration(transition)} ease',
-			'box-shadow #{_duration(transition)} ease',
-			'color #{_duration(transition)} ease'
+			'background-color #{_duration(transition)} ease-in-out',
+			'box-shadow #{_duration(transition)} ease-in-out',
+			'color #{_duration(transition)} ease-in-out'
 		));
-		background-color: transparent;
 		border: 0;
-		box-shadow: inset 0 0 0 1px _palette(border);
-		color: _palette(fg-bold) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-family: _font(family-heading);
-		font-size: 0.6em;
-		font-weight: _font(weight-heading-bold);
-		height: _size(element-height) * 1.75;
-		letter-spacing: _font(kerning-heading);
-		line-height: _size(element-height) * 1.75;
-		padding: 0 2.5em;
+		font-weight: _font(weight-bold);
+		letter-spacing: _font(kerning-alt);
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
+		font-size: 0.75rem;
+		max-width: 20rem;
+		height: 3.75em;
+		line-height: 3.75em;
+		border-radius: 3.75em;
+		padding: 0 2.5em;
+		text-overflow: ellipsis;
+		overflow: hidden;
 
-		&:hover {
-			box-shadow: inset 0 0 0 1px _palette(accent);
-			color: _palette(accent) !important;
-
-			&:active {
-				background-color: transparentize(_palette(accent), 0.95);
+		&.icon {
+			&:before {
+				margin-right: 0.5rem;
 			}
-		}
-
-		&:before, &:after {
-			color: _palette(fg-light);
-			position: relative;
-		}
-
-		&:before {
-			left: -1em;
-			padding: 0 0 0 0.75em;
-		}
-
-		&:after {
-			left: 1em;
-			padding: 0 0.75em 0 0;
 		}
 
 		&.fit {
 			width: 100%;
 		}
 
+		&.small {
+			font-size: 0.6rem;
+			height: 3.325em;
+			line-height: 3.325em;
+			border-radius: 3.325em;
+			padding: 0 2em;
+		}
+
 		&.large {
-			font-size: 0.7em;
+			font-size: 0.8rem;
+			height: 4em;
+			line-height: 4em;
+			border-radius: 4em;
 			padding: 0 3em;
 		}
 
-		&.small {
-			font-size: 0.5em;
+		&.wide {
+			min-width: 14em;
 		}
 
 		&.disabled,
 		&:disabled {
 			@include vendor('pointer-events', 'none');
-			color: _palette(border) !important;
+			opacity: 0.25;
+		}
+	}
 
-			&:before {
-				color: _palette(border) !important;
+	@mixin color-button($p: null) {
+		input[type="submit"],
+		input[type="reset"],
+		input[type="button"],
+		button,
+		.button {
+			background-color: transparent;
+			box-shadow: inset 0 0 0 _size(border-width) _palette($p, border);
+			color: _palette($p, fg-bold) !important;
+
+			&:hover {
+				box-shadow: inset 0 0 0 _size(border-width) _palette($p, accent);
+				color: _palette($p, accent) !important;
+			}
+
+			&:active {
+				background-color: transparentize(_palette($p, accent), 0.8);
+				box-shadow: inset 0 0 0 _size(border-width) _palette($p, accent);
+				color: _palette($p, accent) !important;
+			}
+
+			&.primary {
+				background-color: _palette($p, fg-bold);
+				box-shadow: none;
+				color: _palette($p, bg) !important;
+
+				&:hover {
+					background-color: _palette($p, accent);
+				}
+
+				&:active {
+					background-color: darken(_palette($p, accent), 12);
+				}
 			}
 		}
 	}
+
+	@include color-button;
