--- a/assets/sass/components/_row.scss
+++ b/assets/sass/components/_row.scss
@@ -1,5 +1,5 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Story by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,25 +7,29 @@
 /* Row */
 
 	.row {
-		@include html-grid(1em);
+		@include html-grid(2rem);
 
 		@include breakpoint('<=xlarge') {
-			@include html-grid(1em, 'xlarge');
+			@include html-grid(2rem, 'xlarge');
 		}
 
 		@include breakpoint('<=large') {
-			@include html-grid(1em, 'large');
+			@include html-grid(2rem, 'large');
 		}
 
 		@include breakpoint('<=medium') {
-			@include html-grid(1em, 'medium');
+			@include html-grid(2rem, 'medium');
 		}
 
 		@include breakpoint('<=small') {
-			@include html-grid(1em, 'small');
+			@include html-grid(2rem, 'small');
 		}
 
 		@include breakpoint('<=xsmall') {
-			@include html-grid(1em, 'xsmall');
+			@include html-grid(2rem, 'xsmall');
+		}
+
+		@include breakpoint('<=xxsmall') {
+			@include html-grid(2rem, 'xxsmall');
 		}
 	}
