--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -1,38 +1,49 @@
 ///
-/// Future Imperfect by HTML5 UP
+/// Story by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
 /* Wrapper */
 
+	@mixin wrapper-color($n) {
+		> .color#{$n} {
+			background-color: _palette(color#{$n});
+		}
+	}
+
 	#wrapper {
-		@include vendor('display', 'flex');
-		@include vendor('flex-direction', 'row-reverse');
-		@include vendor('transition', 'opacity #{_duration(menu)} ease');
-		margin: 0 auto;
-		max-width: 100%;
-		opacity: 1;
-		padding: (_size(section-spacing) * 1.5);
-		width: 90em;
+		background-color: inherit;
+		width: 100%;
+		overflow-x: hidden;
 
-		body.is-menu-visible & {
-			opacity: 0.15;
+		> .invert {
+			@include color(invert);
 		}
 
-		@include breakpoint('<=xlarge') {
-			padding: _size(section-spacing);
-		}
+		@include wrapper-color(1);
+		@include wrapper-color(2);
+		@include wrapper-color(3);
+		@include wrapper-color(4);
+		@include wrapper-color(5);
+		@include wrapper-color(6);
+		@include wrapper-color(7);
 
-		@include breakpoint('<=large') {
-			display: block;
-		}
+		&.divided {
+			> * {
+				box-shadow: inset 0 1px 0 0 _palette(border-alt);
 
-		@include breakpoint('<=small') {
-			padding: _size(section-spacing-small);
-		}
+				&:first-child {
+					box-shadow: none !important;
+				}
+			}
 
-		body.single & {
-			display: block;
+			> .invert {
+				box-shadow: inset 0 1px 0 0 _palette(invert, border-alt);
+
+				&:first-child {
+					box-shadow: none !important;
+				}
+			}
 		}
 	}
